--- a/config/experiment/random_example.yaml
+++ b/config/experiment/random_example.yaml
@@ -1,8 +1,20 @@
-generator: fastHGP.examples.3d_example
+# @package _global_
+defaults:
+  - /alg: HGP
+  - _self_
+  - /alg/approximate_selector: fraction
+
+hydra:
+  sweeper:
+    params:
+      # alg: choice(SHGP, TSHGP, HGP)
+      bf.m: range(2, 21)
+
+generator: fastHGP.examples.random_example
 
 kernel:
   _target_: fastHGP.kernels.SE
-  lengthscale: 1.0
+  lengthscale: 0.2
   variance: 0.25
 
 prior:
@@ -18,13 +30,15 @@ likelihood:
     _target_: jax.numpy.array
     object: [0.01]
 
+fractions: [0.01, 0.025, 0.05, 0.075, 0.1, 0.15, 0.2, 0.25, 0.3, 0.5, 0.75]
+
 bf:
-  _target_: ${example.generator}.build_bf
+  _target_: ${generator}.build_bf
   m: 1
-  L: 1.25
+  L: 2.0
   center: 0
 
-N: 300
+N: 1000
 data_generator: 
   _partial_: true
   _target_: ${..generator}.generate_data
