--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '2'
 services:
   latest:
-    image: reference-learning:latest
+    image: fast-hgp:latest
     ports:
     - 8888:8888
     volumes:
