--- a/config/alg/approximate_selector/fraction.yaml
+++ b/config/alg/approximate_selector/fraction.yaml
@@ -1,4 +1,4 @@
-_target_: fastHGP.selectors.FractionSelector
+_target_: fasthgp.selectors.FractionSelector
 fraction: 1e-1
 cost: 
-  _target_: fastHGP.selectors.DualCost
+  _target_: fasthgp.selectors.DualCost
